--- a/docs/source/fables/猫.md
+++ b/docs/source/fables/猫.md
@@ -9,7 +9,7 @@
 
 ```{admonition} **寓意**
 :class: tip
-> 如果有足够的智慧，面对那些曾认定的危险人物所假装出的无辜，你也不会上当受骗。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 如果有足够的智慧，面对那些曾认定的危险人物所假装出的无辜，你也不会上当受骗。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -26,7 +26,7 @@ There was once a house that was overrun with Mice. A Cat heard of this, and said
 
 ```{admonition} **Moral**
 :class: tip
-> If you are wise you won't be deceived by the innocent airs of those whom you have once found to be dangerous.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> If you are wise you won't be deceived by the innocent airs of those whom you have once found to be dangerous.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -47,7 +47,7 @@ There was once a house that was overrun with Mice. A Cat heard of this, and said
 
 ```{admonition} **寓意**
 :class: tip
-> 骗子会伪装自己，但决骗不过聪明人。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 骗子会伪装自己，但决骗不过聪明人。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -64,7 +64,7 @@ A Cat heard that the Birds in an aviary were ailing. So he got himself up as a d
 
 ```{admonition} **Moral**
 :class: tip
-> A villain may disguise himself, but he will not deceive the wise.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> A villain may disguise himself, but he will not deceive the wise.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -85,7 +85,7 @@ A Cat heard that the Birds in an aviary were ailing. So he got himself up as a d
 
 ```{admonition} **寓意**
 :class: tip
-> 要仔细观察环境并拥有敏锐的观察力，以免上当受骗，犯下不可弥补的错误。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 要仔细观察环境并拥有敏锐的观察力，以免上当受骗，犯下不可弥补的错误。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -102,7 +102,7 @@ The Owl is a very wise bird; and once, long ago, when the first oak sprouted in 
 
 ```{admonition} **Moral**
 :class: tip
-> Heed wise counsel, lest you suffer the consequences of your folly.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Heed wise counsel, lest you suffer the consequences of your folly.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -123,7 +123,7 @@ The Owl is a very wise bird; and once, long ago, when the first oak sprouted in 
 
 ```{admonition} **寓意**
 :class: tip
-> 带有好借口的欲望，永远不会让坏人免于恶行。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 带有好借口的欲望，永远不会让坏人免于恶行。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -140,7 +140,7 @@ A Cat pounced on a Cock, and cast about for some good excuse for making a meal o
 
 ```{admonition} **Moral**
 :class: tip
-> The want of a good excuse never kept a villain from crime.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The want of a good excuse never kept a villain from crime.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -161,7 +161,7 @@ A Cat pounced on a Cock, and cast about for some good excuse for making a meal o
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章揭示了诡计阴险的危险，只有诚实和互信才能保证我们的幸福与安宁。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章揭示了诡计阴险的危险，只有诚实和互信才能保证我们的幸福与安宁。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -178,7 +178,7 @@ An Eagle built her nest at the top of a high tree; a Cat with her family occupie
 
 ```{admonition} **Moral**
 :class: tip
-> The moral of this story is to be wary of trusting those who make false claims for their own benefit. Manipulating the truth can lead to disastrous consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The moral of this story is to be wary of trusting those who make false claims for their own benefit. Manipulating the truth can lead to disastrous consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -199,7 +199,7 @@ An Eagle built her nest at the top of a high tree; a Cat with her family occupie
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：即使发生了惊人的改变，本性难移，要保持自我，不要迷失自我。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：即使发生了惊人的改变，本性难移，要保持自我，不要迷失自我。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -216,7 +216,7 @@ A Cat fell in love with a handsome young man, and begged the goddess Venus to ch
 
 ```{admonition} **Moral**
 :class: tip
-> The moral of this story is to be careful what you wish for, as it may not lead to the outcome you desire.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The moral of this story is to be careful what you wish for, as it may not lead to the outcome you desire.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -237,7 +237,7 @@ A Cat fell in love with a handsome young man, and begged the goddess Venus to ch
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章寓意是：当遇到困扰，聪明人会想出一个狡猾的解决方案来解决问题，以及及早采取行动是解决难题的关键。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章寓意是：当遇到困扰，聪明人会想出一个狡猾的解决方案来解决问题，以及及早采取行动是解决难题的关键。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -255,7 +255,7 @@ Addressing herself to the Grasshopper, she said in her pleasantest manner, "As I
 
 ```{admonition} **Moral**
 :class: tip
-> Moral: Do not be deceived by flattery; it can lead to dire consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Moral: Do not be deceived by flattery; it can lead to dire consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -276,7 +276,7 @@ Addressing herself to the Grasshopper, she said in her pleasantest manner, "As I
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：不要滥用特权，新人要尊重老人，面对新环境也要懂得适应。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：不要滥用特权，新人要尊重老人，面对新环境也要懂得适应。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -293,7 +293,7 @@ A Man once bought a Parrot and gave it the run of his house. It revelled in its 
 
 ```{admonition} **Moral**
 :class: tip
-> Moral of the story: Speak with respect at all times, because the way you talk can shape the way others perceive and treat you.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Moral of the story: Speak with respect at all times, because the way you talk can shape the way others perceive and treat you.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -316,7 +316,7 @@ A Man once bought a Parrot and gave it the run of his house. It revelled in its 
 :class: tip
 > 
 
-这篇文章的寓意是：只有团结合作，才能突破困境。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+这篇文章的寓意是：只有团结合作，才能突破困境。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -333,7 +333,7 @@ The Mice once called a meeting to decide on a plan to free themselves of their e
 
 ```{admonition} **Moral**
 :class: tip
-> It is one thing to say that something should be done, but quite a different matter to do it.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> It is one thing to say that something should be done, but quite a different matter to do it.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -354,7 +354,7 @@ The Mice once called a meeting to decide on a plan to free themselves of their e
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章寓意是: 不管做什么，勇气和有趣的想法是成功的关键。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章寓意是: 不管做什么，勇气和有趣的想法是成功的关键。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -371,7 +371,7 @@ Once upon a time a Cat and a Monkey lived as pets in the same house. They were g
 
 ```{admonition} **Moral**
 :class: tip
-> The flatterer seeks some benefit at your expense.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The flatterer seeks some benefit at your expense.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -392,7 +392,7 @@ Once upon a time a Cat and a Monkey lived as pets in the same house. They were g
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章提醒我们，没有经验的人应该慎重冒险，因为不可预测的风险可能会影响到他们的安全。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章提醒我们，没有经验的人应该慎重冒险，因为不可预测的风险可能会影响到他们的安全。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -409,7 +409,7 @@ A very young Mouse, who had never seen anything of the world, almost came to gri
 
 ```{admonition} **Moral**
 :class: tip
-> Do not trust alone to outward appearances.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Do not trust alone to outward appearances.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -430,7 +430,7 @@ A very young Mouse, who had never seen anything of the world, almost came to gri
 
 ```{admonition} **寓意**
 :class: tip
-> 需要献出爱心，去帮助那些需要帮助的人，而不忘记自己也要给自己充足的养分。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 需要献出爱心，去帮助那些需要帮助的人，而不忘记自己也要给自己充足的养分。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -447,7 +447,7 @@ A Cat was growing very thin. As you have guessed, he did not get enough to eat. 
 
 ```{admonition} **Moral**
 :class: tip
-> Be wise and shun the quack.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Be wise and shun the quack.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -468,7 +468,7 @@ A Cat was growing very thin. As you have guessed, he did not get enough to eat. 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章蕴含的寓意是：聪明的打算总能战胜无知，智慧必胜力量。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章蕴含的寓意是：聪明的打算总能战胜无知，智慧必胜力量。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -485,7 +485,7 @@ There was once a Cat who was so watchful, that a Mouse hardly dared show the tip
 
 ```{admonition} **Moral**
 :class: tip
-> The wise do not let themselves be tricked a second time.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The wise do not let themselves be tricked a second time.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
