--- a/docs/source/fables/青蛙.md
+++ b/docs/source/fables/青蛙.md
@@ -9,7 +9,7 @@
 
 ```{admonition} **寓意**
 :class: tip
-> 人们应该学会尊重他人，懂得保护他人的权利，不要肆意破坏他人的生活环境。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 人们应该学会尊重他人，懂得保护他人的权利，不要肆意破坏他人的生活环境。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -26,7 +26,7 @@ Some mischievous Boys were playing on the edge of a pond, and, catching sight of
 
 ```{admonition} **Moral**
 :class: tip
-> we should always respect the life of creatures that are different from us and be mindful of the consequences of our actions.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> we should always respect the life of creatures that are different from us and be mindful of the consequences of our actions.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -47,7 +47,7 @@ Some mischievous Boys were playing on the edge of a pond, and, catching sight of
 
 ```{admonition} **寓意**
 :class: tip
-> 不要因为一些不愉快和挫折就去逃避,适当的时候我们可以想想还有很多不如我们的人,我们应该努力,改正自己的不足,增加自信感。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 不要因为一些不愉快和挫折就去逃避,适当的时候我们可以想想还有很多不如我们的人,我们应该努力,改正自己的不足,增加自信感。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -64,7 +64,7 @@ The Hares once gathered together and lamented the unhappiness of their lot, expo
 
 ```{admonition} **Moral**
 :class: tip
-> It is important to recognize that others may be more scared of you than you are of them, and that being brave may help you overcome difficulties.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> It is important to recognize that others may be more scared of you than you are of them, and that being brave may help you overcome difficulties.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -85,7 +85,7 @@ The Hares once gathered together and lamented the unhappiness of their lot, expo
 
 ```{admonition} **寓意**
 :class: tip
-> 毫无根据的抱怨,只会惹人耻笑。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 毫无根据的抱怨,只会惹人耻笑。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -102,7 +102,7 @@ Once upon a time the Sun was about to take to himself a wife. The Frogs in terro
 
 ```{admonition} **Moral**
 :class: tip
-> Watch the actions of your enemy.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Watch the actions of your enemy.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -123,7 +123,7 @@ Once upon a time the Sun was about to take to himself a wife. The Frogs in terro
 
 ```{admonition} **寓意**
 :class: tip
-> 要医人，先医己。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 要医人，先医己。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -140,7 +140,7 @@ Once upon a time a Frog came forth from his home in the marshes and proclaimed t
 
 ```{admonition} **Moral**
 :class: tip
-> Physician, heal thyself.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Physician, heal thyself.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -161,7 +161,7 @@ Once upon a time a Frog came forth from his home in the marshes and proclaimed t
 
 ```{admonition} **寓意**
 :class: tip
-> 要学会多为他人考虑一下，不能只考虑自己的得失利益。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 要学会多为他人考虑一下，不能只考虑自己的得失利益。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -178,7 +178,7 @@ A Mouse and a Frog struck up a friendship; they were not well mated, for the Mou
 
 ```{admonition} **Moral**
 :class: tip
-> It is important to recognize the limits of a relationship and to act within those limits for the safety and well-being of both parties.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> It is important to recognize the limits of a relationship and to act within those limits for the safety and well-being of both parties.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -199,7 +199,7 @@ A Mouse and a Frog struck up a friendship; they were not well mated, for the Mou
 
 ```{admonition} **寓意**
 :class: tip
-> 莽撞的请求常常会带来反作用，你所得到的正是你自己所请求的，但未必会是你想要的结果。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 莽撞的请求常常会带来反作用，你所得到的正是你自己所请求的，但未必会是你想要的结果。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -217,7 +217,7 @@ Thinking that a King of that sort was an insult to their dignity, they sent to J
 
 ```{admonition} **Moral**
 :class: tip
-> When you seek to change your condition, be sure that you can better it.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> When you seek to change your condition, be sure that you can better it.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -238,7 +238,7 @@ Thinking that a King of that sort was an insult to their dignity, they sent to J
 
 ```{admonition} **寓意**
 :class: tip
-> 自量力的人，最终会惨遭失败。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 自量力的人，最终会惨遭失败。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -255,7 +255,7 @@ Two little Frogs were playing about at the edge of a pool when an Ox came down t
 
 ```{admonition} **Moral**
 :class: tip
-> Pride comes before a fall.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Pride comes before a fall.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -276,7 +276,7 @@ Two little Frogs were playing about at the edge of a pool when an Ox came down t
 
 ```{admonition} **寓意**
 :class: tip
-> 本文突出的是：经常换个环境，保护自己的安全，不要停留在同一个地方，避免造成不必要的损失。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 本文突出的是：经常换个环境，保护自己的安全，不要停留在同一个地方，避免造成不必要的损失。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -293,7 +293,7 @@ Two Frogs were neighbours. One lived in a marsh, where there was plenty of water
 
 ```{admonition} **Moral**
 :class: tip
-> Moral: Change can be uncomfortable, but it can also save your life.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Moral: Change can be uncomfortable, but it can also save your life.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -314,7 +314,7 @@ Two Frogs were neighbours. One lived in a marsh, where there was plenty of water
 
 ```{admonition} **寓意**
 :class: tip
-> 凡事应三思而后行。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 凡事应三思而后行。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -331,7 +331,7 @@ Two Frogs lived together in a marsh. But one hot summer the marsh dried up, and 
 
 ```{admonition} **Moral**
 :class: tip
-> Think twice before you act.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Think twice before you act.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -352,7 +352,7 @@ Two Frogs lived together in a marsh. But one hot summer the marsh dried up, and 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：不要尝试不可能的事情。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：不要尝试不可能的事情。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -369,7 +369,7 @@ An Ox came down to a reedy pool to drink. As he splashed heavily into the water,
 
 ```{admonition} **Moral**
 :class: tip
-> Do not attempt the impossible.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Do not attempt the impossible.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -390,7 +390,7 @@ An Ox came down to a reedy pool to drink. As he splashed heavily into the water,
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：尊重他人，不要做伤害别人的事情。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：尊重他人，不要做伤害别人的事情。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -407,7 +407,7 @@ Some Boys were playing one day at the edge of a pond in which lived a family of 
 
 ```{admonition} **Moral**
 :class: tip
-> Always stop to think whether your fun may not be the cause of another's unhappiness.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Always stop to think whether your fun may not be the cause of another's unhappiness.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -428,7 +428,7 @@ Some Boys were playing one day at the edge of a pond in which lived a family of 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：即使面临最艰难的情况，生命依旧具有可贵的价值，抓住机会，不要轻易放弃希望。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：即使面临最艰难的情况，生命依旧具有可贵的价值，抓住机会，不要轻易放弃希望。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -445,7 +445,7 @@ Hares, as you know, are very timid, The least shadow, sends them scurrying in fr
 
 ```{admonition} **Moral**
 :class: tip
-> However unfortunate we may think we are there is always someone worse off than ourselves.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> However unfortunate we may think we are there is always someone worse off than ourselves.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -466,7 +466,7 @@ Hares, as you know, are very timid, The least shadow, sends them scurrying in fr
 
 ```{admonition} **寓意**
 :class: tip
-> 寓意：无论环境发生什么变化，我们都要有警惕的眼睛，对未来充满准备，以免被不利影响。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 寓意：无论环境发生什么变化，我们都要有警惕的眼睛，对未来充满准备，以免被不利影响。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -483,7 +483,7 @@ Two Bulls were fighting furiously in a field, at one side of which was a marsh. 
 
 ```{admonition} **Moral**
 :class: tip
-> When the great fall out, the weak must suffer for it.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> When the great fall out, the weak must suffer for it.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -504,7 +504,7 @@ Two Bulls were fighting furiously in a field, at one side of which was a marsh. 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：勇敢追求梦想即使只是走出一小步，也可能带来意想不到的结果。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：勇敢追求梦想即使只是走出一小步，也可能带来意想不到的结果。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -521,7 +521,7 @@ A young Mouse in search of adventure was running along the bank of a pond where 
 
 ```{admonition} **Moral**
 :class: tip
-> Those who seek to harm others often come to harm themselves through their own deceit.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Those who seek to harm others often come to harm themselves through their own deceit.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -542,7 +542,7 @@ A young Mouse in search of adventure was running along the bank of a pond where 
 
 ```{admonition} **寓意**
 :class: tip
-> 此文的寓意是：只有自己精神和身体健康之后，才能真正帮助他人。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 此文的寓意是：只有自己精神和身体健康之后，才能真正帮助他人。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -559,7 +559,7 @@ An old Toad once informed all his neighbors that he was a learned doctor. In fac
 
 ```{admonition} **Moral**
 :class: tip
-> Those who would mend others, should first mend themselves.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Those who would mend others, should first mend themselves.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
