--- a/docs/source/fables/驴.md
+++ b/docs/source/fables/驴.md
@@ -9,7 +9,7 @@
 
 ```{admonition} **寓意**
 :class: tip
-> 好牌只能用一次，多了就无效。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 好牌只能用一次，多了就无效。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -26,7 +26,7 @@ A Pedlar who owned an Ass one day bought a quantity of salt, and loaded up his b
 
 ```{admonition} **Moral**
 :class: tip
-> You may play a good card once too often.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> You may play a good card once too often.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -47,7 +47,7 @@ A Pedlar who owned an Ass one day bought a quantity of salt, and loaded up his b
 
 ```{admonition} **寓意**
 :class: tip
-> 人们往往为小事争吵不休,从而失去了最重要的东西。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 人们往往为小事争吵不休,从而失去了最重要的东西。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -64,7 +64,7 @@ A certain man hired an Ass for a journey in summertime, and started out with the
 
 ```{admonition} **Moral**
 :class: tip
-> Fighting over small matters is not worth it and can even end up costing you more than you bargained for.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Fighting over small matters is not worth it and can even end up costing you more than you bargained for.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -85,7 +85,7 @@ A certain man hired an Ass for a journey in summertime, and started out with the
 
 ```{admonition} **寓意**
 :class: tip
-> 外表虽然可以暂时掩盖一个人的缺点,但它很容易被揭穿。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 外表虽然可以暂时掩盖一个人的缺点,但它很容易被揭穿。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -102,7 +102,7 @@ An Ass found a Lion's Skin, and dressed himself up in it. Then he went about fri
 
 ```{admonition} **Moral**
 :class: tip
-> Fine clothes may disguise, but silly words will disclose a fool.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Fine clothes may disguise, but silly words will disclose a fool.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -123,7 +123,7 @@ An Ass found a Lion's Skin, and dressed himself up in it. Then he went about fri
 
 ```{admonition} **寓意**
 :class: tip
-> 当我们面临危机时，如果不积极主动改变，我们可能会处于更糟的境地。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 当我们面临危机时，如果不积极主动改变，我们可能会处于更糟的境地。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -140,7 +140,7 @@ An old Peasant was sitting in a meadow watching his Ass, which was grazing close
 
 ```{admonition} **Moral**
 :class: tip
-> Think ahead and plan for potential problems, rather than relying on outside help when difficult situations arise.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Think ahead and plan for potential problems, rather than relying on outside help when difficult situations arise.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -161,7 +161,7 @@ An old Peasant was sitting in a meadow watching his Ass, which was grazing close
 
 ```{admonition} **寓意**
 :class: tip
-> 强者为王。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 强者为王。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -178,7 +178,7 @@ A Lion and a Wild Ass went out hunting together: the latter was to run down the 
 
 ```{admonition} **Moral**
 :class: tip
-> Might makes right.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Might makes right.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -199,7 +199,7 @@ A Lion and a Wild Ass went out hunting together: the latter was to run down the 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：协作可以实现更大的成就，强者也要认识到自身的不足和他人的可贵之处。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：协作可以实现更大的成就，强者也要认识到自身的不足和他人的可贵之处。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -216,7 +216,7 @@ A Lion and an Ass set up as partners and went a-hunting together. In course of t
 
 ```{admonition} **Moral**
 :class: tip
-> Moral: Even though you may not have the strength of those around you, your cunning can still make a difference.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Moral: Even though you may not have the strength of those around you, your cunning can still make a difference.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -237,7 +237,7 @@ A Lion and an Ass set up as partners and went a-hunting together. In course of t
 
 ```{admonition} **寓意**
 :class: tip
-> 盲目的自信通常会导致失败。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 盲目的自信通常会导致失败。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -254,7 +254,7 @@ An Ass and a Cock were in a cattle-pen together. Presently a Lion, who had been 
 
 ```{admonition} **Moral**
 :class: tip
-> False confidence often leads to disaster.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> False confidence often leads to disaster.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -275,7 +275,7 @@ An Ass and a Cock were in a cattle-pen together. Presently a Lion, who had been 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章寓意: 努力讨好所有人其实无异于让自己落空，应当正确判断形势，自行做出恰当的决定。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章寓意: 努力讨好所有人其实无异于让自己落空，应当正确判断形势，自行做出恰当的决定。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -297,7 +297,7 @@ again, convinced that in trying to please all he had pleased none, and had lost 
 
 ```{admonition} **Moral**
 :class: tip
-> Moral of the story: When trying to please everyone, you may end up pleasing no one and losing something valuable in the process.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Moral of the story: When trying to please everyone, you may end up pleasing no one and losing something valuable in the process.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -318,7 +318,7 @@ again, convinced that in trying to please all he had pleased none, and had lost 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：遇到困难时，仁慈的善行会换来报答，而残忍的行为只会给自己带来懊悔。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：遇到困难时，仁慈的善行会换来报答，而残忍的行为只会给自己带来懊悔。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -335,7 +335,7 @@ A certain man who had an Ass and a Mule loaded them both up one day and set out 
 
 ```{admonition} **Moral**
 :class: tip
-> Moral: Selfishness brings its own punishment.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Moral: Selfishness brings its own punishment.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -356,7 +356,7 @@ A certain man who had an Ass and a Mule loaded them both up one day and set out 
 
 ```{admonition} **寓意**
 :class: tip
-> 寓意是：在面对危险时，要有反思能力，否则自己将陷入死亡的危险。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 寓意是：在面对危险时，要有反思能力，否则自己将陷入死亡的危险。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -373,7 +373,7 @@ An Ass was being driven down a mountain road, and after jogging along for a whil
 
 ```{admonition} **Moral**
 :class: tip
-> A single moment of recklessness can lead to disaster; be sure to think things through before you act.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> A single moment of recklessness can lead to disaster; be sure to think things through before you act.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -394,7 +394,7 @@ An Ass was being driven down a mountain road, and after jogging along for a whil
 
 ```{admonition} **寓意**
 :class: tip
-> 物以类聚，人以群分。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 物以类聚，人以群分。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -411,7 +411,7 @@ A Man who wanted to buy an Ass went to market, and, coming across a likely-looki
 
 ```{admonition} **Moral**
 :class: tip
-> A man is known by the company he keeps.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> A man is known by the company he keeps.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -432,7 +432,7 @@ A Man who wanted to buy an Ass went to market, and, coming across a likely-looki
 
 ```{admonition} **寓意**
 :class: tip
-> 用昂贵代价换来的优势是令人怀疑的福气。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 用昂贵代价换来的优势是令人怀疑的福气。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -450,7 +450,7 @@ Going up to him, he said, "What a lucky beast you are! Your sleek coat shows how
 
 ```{admonition} **Moral**
 :class: tip
-> Advantages that are dearly bought are doubtful blessings.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Advantages that are dearly bought are doubtful blessings.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -471,7 +471,7 @@ Going up to him, he said, "What a lucky beast you are! Your sleek coat shows how
 
 ```{admonition} **寓意**
 :class: tip
-> 到了更坏的主人那里，才知道前主人的好。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 到了更坏的主人那里，才知道前主人的好。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -488,7 +488,7 @@ A Gardener had an Ass which had a very hard time of it, what with scanty food, h
 
 ```{admonition} **Moral**
 :class: tip
-> Servants don't know a good master till they have served a worse.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Servants don't know a good master till they have served a worse.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -509,7 +509,7 @@ A Gardener had an Ass which had a very hard time of it, what with scanty food, h
 
 ```{admonition} **寓意**
 :class: tip
-> 除非能照顾好自己，否则做自己的主人一点儿用也没有。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 除非能照顾好自己，否则做自己的主人一点儿用也没有。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -526,7 +526,7 @@ A Wild Ass saw a Pack-Ass jogging along under a heavy load, and taunted him with
 
 ```{admonition} **Moral**
 :class: tip
-> It is no use being your own master unless you can stand up for yourself.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> It is no use being your own master unless you can stand up for yourself.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -547,7 +547,7 @@ A Wild Ass saw a Pack-Ass jogging along under a heavy load, and taunted him with
 
 ```{admonition} **寓意**
 :class: tip
-> 那些夺走他人荣誉的人，必定会遭受沉重的打击。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 那些夺走他人荣誉的人，必定会遭受沉重的打击。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -564,7 +564,7 @@ A certain man put an Image on the back of his Ass to take it to one of the templ
 
 ```{admonition} **Moral**
 :class: tip
-> Rude shocks await those who take to themselves the credit that is due to others.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Rude shocks await those who take to themselves the credit that is due to others.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -585,7 +585,7 @@ A certain man put an Image on the back of his Ass to take it to one of the templ
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章寓意是：即使被迫进行糟糕的临时组合，人们也应该做自己能力范围内的所有事。尽管面对困难，但仍应当慎重地思考，一方面以便化解矛盾，另一方面也能建立双赢的关系。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章寓意是：即使被迫进行糟糕的临时组合，人们也应该做自己能力范围内的所有事。尽管面对困难，但仍应当慎重地思考，一方面以便化解矛盾，另一方面也能建立双赢的关系。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -602,7 +602,7 @@ A Ploughman yoked his Ox and his Ass together, and set to work to plough his fie
 
 ```{admonition} **Moral**
 :class: tip
-> The moral of this story is that we should not expect those in a weaker position to always bear the brunt of the work and the responsibility.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The moral of this story is that we should not expect those in a weaker position to always bear the brunt of the work and the responsibility.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -623,7 +623,7 @@ A Ploughman yoked his Ox and his Ass together, and set to work to plough his fie
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：傲慢无礼定会有报应，要记住谦虚有礼才是上策。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：傲慢无礼定会有报应，要记住谦虚有礼才是上策。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -640,7 +640,7 @@ A Horse, proud of his fine harness, met an Ass on the high-road. As the Ass with
 
 ```{admonition} **Moral**
 :class: tip
-> The moral of this story is that pride comes before a fall and humility brings true greatness.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The moral of this story is that pride comes before a fall and humility brings true greatness.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -661,7 +661,7 @@ A Horse, proud of his fine harness, met an Ass on the high-road. As the Ass with
 
 ```{admonition} **寓意**
 :class: tip
-> 这里的寓意是，即使你有决定自己要走的路，有时候有人可以帮助你把你带回正确的路上。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这里的寓意是，即使你有决定自己要走的路，有时候有人可以帮助你把你带回正确的路上。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -678,7 +678,7 @@ An Ass was being driven along a road leading down the mountain side, when he sud
 
 ```{admonition} **Moral**
 :class: tip
-> They who will not listen to reason but stubbornly go their own way against the friendly advice of those who are wiser than they, are on the road to misfortune.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> They who will not listen to reason but stubbornly go their own way against the friendly advice of those who are wiser than they, are on the road to misfortune.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -699,7 +699,7 @@ An Ass was being driven along a road leading down the mountain side, when he sud
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章寓意是：不要用自己的傲慢或嘲笑来伤害尊严，要学会尊重他人，并超越他人的无知。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章寓意是：不要用自己的傲慢或嘲笑来伤害尊严，要学会尊重他人，并超越他人的无知。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -716,7 +716,7 @@ One day as the Lion walked proudly down a forest aisle, and the animals respectf
 
 ```{admonition} **Moral**
 :class: tip
-> Do not resent the remarks of a fool. Ignore them.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Do not resent the remarks of a fool. Ignore them.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -737,7 +737,7 @@ One day as the Lion walked proudly down a forest aisle, and the animals respectf
 
 ```{admonition} **寓意**
 :class: tip
-> 寓意是：有时候，失去会让你受益。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 寓意是：有时候，失去会让你受益。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -754,7 +754,7 @@ A Merchant, driving his Ass homeward from the seashore with a heavy load of salt
 
 ```{admonition} **Moral**
 :class: tip
-> The same measures will not suit all circumstances.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The same measures will not suit all circumstances.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -775,7 +775,7 @@ A Merchant, driving his Ass homeward from the seashore with a heavy load of salt
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章强调了团队合作的重要性：一个人无法完成复杂的任务，但如果把所有人的优势汇集起来，就可以取得更好的结果。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章强调了团队合作的重要性：一个人无法完成复杂的任务，但如果把所有人的优势汇集起来，就可以取得更好的结果。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -792,7 +792,7 @@ A Lion and an Ass agreed to go hunting together. In their search for game the hu
 
 ```{admonition} **Moral**
 :class: tip
-> The loud-mouthed boaster does not impress nor frighten those who know him.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The loud-mouthed boaster does not impress nor frighten those who know him.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -813,7 +813,7 @@ A Lion and an Ass agreed to go hunting together. In their search for game the hu
 
 ```{admonition} **寓意**
 :class: tip
-> 通过对自然界的尊重和保护，我们可以保护我们共同的家园。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 通过对自然界的尊重和保护，我们可以保护我们共同的家园。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -830,7 +830,7 @@ One day as an Ass was walking in the pasture, he found some Grasshoppers chirpin
 
 ```{admonition} **Moral**
 :class: tip
-> The laws of nature are unchangeable.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The laws of nature are unchangeable.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -851,7 +851,7 @@ One day as an Ass was walking in the pasture, he found some Grasshoppers chirpin
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是: 在炎热的天气里，即使有困难，也应该设法停下来休息，以确保安全。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是: 在炎热的天气里，即使有困难，也应该设法停下来休息，以确保安全。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -868,7 +868,7 @@ A Traveler had hired an Ass to carry him to a distant part of the country. The o
 
 ```{admonition} **Moral**
 :class: tip
-> In quarreling about the shadow we often lose the substance.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> In quarreling about the shadow we often lose the substance.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -889,7 +889,7 @@ A Traveler had hired an Ass to carry him to a distant part of the country. The o
 
 ```{admonition} **寓意**
 :class: tip
-> 寓意是：有时候慢条斯理的行事方式可能会被嘲笑，但往往会给你带来更好的结果。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 寓意是：有时候慢条斯理的行事方式可能会被嘲笑，但往往会给你带来更好的结果。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -906,7 +906,7 @@ One day, a long time ago, an old Miller and his Son were on their way to market 
 
 ```{admonition} **Moral**
 :class: tip
-> If you try to please all, you please none.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> If you try to please all, you please none.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -927,7 +927,7 @@ One day, a long time ago, an old Miller and his Son were on their way to market 
 
 ```{admonition} **寓意**
 :class: tip
-> 一个傻瓜可能会被他的衣着和外表所欺骗，但他的话很快就会显示出他的真实身份。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 一个傻瓜可能会被他的衣着和外表所欺骗，但他的话很快就会显示出他的真实身份。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -944,7 +944,7 @@ An Ass found a Lion's skin left in the forest by a hunter. He dressed himself in
 
 ```{admonition} **Moral**
 :class: tip
-> A fool may deceive by his dress and appearance, but his words will soon show what he really is.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> A fool may deceive by his dress and appearance, but his words will soon show what he really is.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
