--- a/docs/source/fables/山羊.md
+++ b/docs/source/fables/山羊.md
@@ -9,7 +9,7 @@
 
 ```{admonition} **寓意**
 :class: tip
-> 不要在一些小事上过度纠结，可以为他人让步。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 不要在一些小事上过度纠结，可以为他人让步。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -26,7 +26,7 @@ Jupiter granted beards to the She-Goats at their own request, much to the disgus
 
 ```{admonition} **Moral**
 :class: tip
-> Everyone has their own rights and should be respected for them, regardless of any differences that may be present.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Everyone has their own rights and should be respected for them, regardless of any differences that may be present.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -47,7 +47,7 @@ Jupiter granted beards to the She-Goats at their own request, much to the disgus
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章暗示, 尽管母山羊做出伤害他人的行为，敌人也可以以恩慈与宽容的态度去面对他，因为在某些情况下，即使被伤害者被做出巨大牺牲，他也能够成为伤害者的福气。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章暗示, 尽管母山羊做出伤害他人的行为，敌人也可以以恩慈与宽容的态度去面对他，因为在某些情况下，即使被伤害者被做出巨大牺牲，他也能够成为伤害者的福气。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -64,7 +64,7 @@ A Goat was straying in a vineyard, and began to browse on the tender shoots of a
 
 ```{admonition} **Moral**
 :class: tip
-> Always be kind and generous, even in the face of adversity, as good will often come back to you in unexpected ways.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Always be kind and generous, even in the face of adversity, as good will often come back to you in unexpected ways.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -85,7 +85,7 @@ A Goat was straying in a vineyard, and began to browse on the tender shoots of a
 
 ```{admonition} **寓意**
 :class: tip
-> 竭力掩盖无法隐瞒的事实是没用的。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 竭力掩盖无法隐瞒的事实是没用的。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -102,7 +102,7 @@ A Goatherd was one day gathering his flock to return to the fold, when one of hi
 
 ```{admonition} **Moral**
 :class: tip
-> It's no use trying to hide what can't be hidden.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> It's no use trying to hide what can't be hidden.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -123,7 +123,7 @@ A Goatherd was one day gathering his flock to return to the fold, when one of hi
 
 ```{admonition} **寓意**
 :class: tip
-> 寓意:耐心待人、平等对待，才能让人留下来，即使你不知晓未来，也应当慎重对待，避免令人失望。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 寓意:耐心待人、平等对待，才能让人留下来，即使你不知晓未来，也应当慎重对待，避免令人失望。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -140,7 +140,7 @@ A Goatherd was tending his goats out at pasture when he saw a number of Wild Goa
 
 ```{admonition} **Moral**
 :class: tip
-> The moral of this story is: Treat all people equally and fairly, and don't show favoritism, or those around you may become suspicious and distrustful.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The moral of this story is: Treat all people equally and fairly, and don't show favoritism, or those around you may become suspicious and distrustful.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -161,7 +161,7 @@ A Goatherd was tending his goats out at pasture when he saw a number of Wild Goa
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章寓意是：即使面对极具挑战的情况，勇敢面对困难，并保持进取心，总会有最终的成功与收获。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章寓意是：即使面对极具挑战的情况，勇敢面对困难，并保持进取心，总会有最终的成功与收获。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -178,7 +178,7 @@ Two Goats, frisking gayly on the rocky steeps of a mountain valley, chanced to m
 
 ```{admonition} **Moral**
 :class: tip
-> It is better to yield than to come to misfortune through stubbornness.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> It is better to yield than to come to misfortune through stubbornness.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -199,7 +199,7 @@ Two Goats, frisking gayly on the rocky steeps of a mountain valley, chanced to m
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：无论你如何努力，如果受害者不愿接受帮助，你也拿什么帮助他们。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：无论你如何努力，如果受害者不愿接受帮助，你也拿什么帮助他们。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -216,7 +216,7 @@ One cold stormy day a Goatherd drove his Goats for shelter into a cave, where a 
 
 ```{admonition} **Moral**
 :class: tip
-> It is unwise to treat old friends badly for the sake of new ones.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> It is unwise to treat old friends badly for the sake of new ones.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -237,7 +237,7 @@ One cold stormy day a Goatherd drove his Goats for shelter into a cave, where a 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：即使处于被动的地位，也要记住自己的尊严。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：即使处于被动的地位，也要记住自己的尊严。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -254,7 +254,7 @@ A Bull once escaped from a Lion by entering a cave which the Goatherds used to h
 
 ```{admonition} **Moral**
 :class: tip
-> It is wicked to take advantage of another's distress.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> It is wicked to take advantage of another's distress.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
@@ -275,7 +275,7 @@ A Bull once escaped from a Lion by entering a cave which the Goatherds used to h
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：说出真相是非常重要的，它可以帮助我们成功。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：说出真相是非常重要的，它可以帮助我们成功。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 听寓言故事
 
@@ -292,7 +292,7 @@ A Goat strayed away from the flock, tempted by a patch of clover. The Goatherd t
 
 ```{admonition} **Moral**
 :class: tip
-> Wicked deeds will not stay hid.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Wicked deeds will not stay hid.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 👇 Listen to this fable
 
